# Rackwright

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  app_next.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260225_0001_initial_schema.py  20260225_0002_template_set_sources.py  __init__.py
docs/architecture/: next_layered_architecture.md
docs/checklists/: Rackwright_Gate_Execution_Record_2026-02-25.md  Rackwright_Post_Implementation_Checklist.md
docs/plan/: Rackwright_Implementation_Plan.md
docs/spec/: Rackwright_Detailed_Specification.md
rackwright/: app.py  db.py  default_templates.py  generation_service.py
rackwright/templates/: dashboard.html  device_detail.html  project_cabling.html  project_detail.html  project_errors.html  project_generate.html  project_section_rules.html  project_versions.html  rack_detail.html  template_set_form.html  template_sets_list.html
scripts/: check_file_headers.py
src/: README.md
src/rackwright/: __init__.py  _legacy_flask_app.py  change_logging.py  csv_services.py  default_templates.py  diff_service.py  generation_service.py  models.py  template_services.py  view_builders.py
src/rackwright/app/: __init__.py  dto.py
src/rackwright/app/ports/: __init__.py  exporters.py  (+1 more)
src/rackwright/core/: __init__.py  entities.py  errors.py  value_objects.py
src/rackwright/infra/: __init__.py
src/rackwright/templates/: dashboard.html  project_cabling.html  project_versions.html
src/rackwright/web/: __init__.py  flask_app.py
tasks/: 001_step_1-db-schema-and-models.md  002_step_2-change-logging-hook.md  003_step_3-csv-import-export-services.md  004_step_4-template-snapshot-creation.md  005_step_5-view-model-builder.md  006_step_6-artifact-generation.md  007_step_7-diff-generation-and-marking.md  008_step_8-web-ui-server-side.md  009_step_9-field-operation-document-improvement-plan.md
tests/: test_change_logging_step2.py  test_csv_services_step3.py  test_diff_step7.py  test_generation_step6.py  test_migration_step1.py  test_template_snapshot_step4.py  test_view_builders_step5.py  test_web_ui_step8.py
tests/unit/: test_core_day2.py  test_csv_day6.py  test_generate_artifacts_day6.py  test_infra_day3.py  test_usecases_day4.py  test_web_day5.py
(+22 files in other folders)
